# opentelemetry-intrumentation-peewee

./: .gitignore  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
src/opentelemetry/instrumentation/peewee/: __init__.py  package.py  version.py
tests/: test_peewee.py  test_sqlcommenter.py
