[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-peewee"
description = "Peewee instrumentation for OpenTelemetry"
readme = "README.rst"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
authors = [
    { name = "Warren Angelo H. Layson", email = "warren@wingaru.com.au" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "opentelemetry-instrumentation == 0.43b0",
    "opentelemetry-api ~= 1.12",
    "opentelemetry-semantic-conventions == 0.43b0",
]

[project.optional-dependencies]
instruments = [
    "peewee >= 3.0.18"
]
test = [
    "opentelemetry-sdk ~= 1.12",
    "opentelemetry-test-utils == 0.43b0",
    "pytest",
    "opentelemetry-instrumentation-peewee[instruments]"
]

[project.entry-points."opentelemetry_instrumentor"]
peewee = "opentelemetry.instrumentation.peewee:PeeweeInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/peewee/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
