[metadata]
name = opentelemetry-instrumentation-peewee
description = Peewee instrumentation for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Warren Angelo H. Layson
author_email = warren@wingaru.com.au
platforms = any
license = Apache-2.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires=
    opentelemetry-instrumentation == 0.33b0
    opentelemetry-api ~= 1.12
    opentelemetry-semantic-conventions == 0.33b0

[options.extras_require]
test =
    opentelemetry-sdk ~= 1.12
    opentelemetry-test-utils == 0.33b0
    pytest

[options.entry_points]
opentelemetry_instrumentor =
    peewee = opentelemetry.instrumentation.peewee:PeeweeInstrumentor

[options.packages.find]
where = src